[package]
name = "language_compiler"
version = "0.1.0"
edition = "2021"
authors = ["Elias Prescott <eliasprescott@gmail.com>"]
repository = "https://github.com/EliasPrescott/language_compiler/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1.3", features = ["alloc"] }
